# LangAI

./: .gitignore  Makefile  README.md  firstRAG.ipynb  main.py  mistral_test.py  pyproject.toml  rag.ipynb  requirements.txt  setup.py
API_discovery/: ChatModel_response.ipynb  GPT_response.ipynb  LLAMA_response.ipynb
Data/: 1881-01-11.txt
Embeddings/: Ollama_embeddings.ipynb  elle.txt  moi.txt
RAG/: firstRAG.ipynb  rag.ipynb  tokenNumber.ipynb
RAG/utils/: my_indexing_utils.py
backend/: loading_documents.py
backend/RagCore/KnowledgeManagement/Embedding/: Embedder.py  Embedder_bis.py  store.py  view.py
backend/RagCore/KnowledgeManagement/Indexing/: documentSplitter.py  duckdbManager.py  metadataGenerator.py  vectorBase_io.py
backend/RagCore/Knowledge_management_upstream/Indexing/: reader.py
backend/RagCore/Retrieving/: retriever.py
backend/RagCore/Utils/: fileIndexBuilder.py  pathProvider.py
config/: default.yaml
frontend/: web.py  web_app.py
frontend/interface/: logic.py
frontend/ui/: ui_backend.py
modules.egg-info/: PKG-INFO  SOURCES.txt
modules/data_managing/: metadata_gen.py  read.py
modules/embedding/: store.py
modules/retrieving/: retrieving.py
modules/splitting/: metadata_gen.py  read.py  splitter.py
modules/tests/: web.py
pipelines/: loading_documents.py  main.py
ragcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
