[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ragcore"
version = "0.1.0"
description = "A modular RAG framework for document retrieval and generation."
authors = [
  { name = "Matis Codjia", email = "matis.codjia@epita.fr" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "langchain==0.3.20",
  "langchain-core==0.3.45",
  "langchain-text-splitters==0.3.6",
  "langsmith==0.3.15",
  "numpy==2.2.4",
  "tqdm==4.67.1",
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",

  "requests==2.32.3",
  "httpx==0.28.1",

  "rich==13.9.4",
  "typer==0.15.2",

  "SQLAlchemy==2.0.39"
]